@@ -3,9 +3,7 @@ package redstonedubstep.mods.modlister;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -13,10 +11,10 @@ import com.mojang.authlib.GameProfile;
 
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.event.RegisterCommandsEvent;
-import net.minecraftforge.fml.ExtensionPoint;
+import net.minecraftforge.fml.IExtensionPoint;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.fml.network.FMLNetworkConstants;
+import net.minecraftforge.network.NetworkConstants;
 
 @Mod(ModLister.MODID)
 public class ModLister {
@@ -26,7 +24,7 @@ public class ModLister {
 	private static final Logger LOGGER = LogManager.getLogger();
 
 	public ModLister() {
-		ModLoadingContext.get().registerExtensionPoint(ExtensionPoint.DISPLAYTEST, () -> Pair.of(() -> FMLNetworkConstants.IGNORESERVERONLY, (a, b) -> true));
+		ModLoadingContext.get().registerExtensionPoint(IExtensionPoint.DisplayTest.class, () -> new IExtensionPoint.DisplayTest(() -> NetworkConstants.IGNORESERVERONLY, (a, b) -> true));
 		MinecraftForge.EVENT_BUS.addListener(this::registerCommands);
 	}
 
@@ -46,7 +44,7 @@ public class ModLister {
 		CURRENT_MODS.put(player, modList);
 
 		if (ALL_MODS.containsKey(player))
-			ALL_MODS.get(player).addAll(modList.stream().filter(s -> !ALL_MODS.get(player).contains(s)).collect(Collectors.toList()));
+			ALL_MODS.get(player).addAll(modList.stream().filter(s -> !ALL_MODS.get(player).contains(s)).toList());
 		else
 			ALL_MODS.put(player, modList);
 
